CRAN updates and clean (#271)
* DESCRIPTION updates

* styler

* improve test for winbuilder

* use canoncial CRAN URLs

* update language/vignettes

* getter for stan model

* get_stan_code

* better simulation errors

* spell check

* styler again

* rerun vignettes

* Update DESCRIPTION

Co-authored-by: Isaac Gravestock <83659704+gravesti@users.noreply.github.com>

* add test

* add detailed version to badge

---------

Co-authored-by: Isaac Gravestock <isaac.gravestock@roche.com>
Co-authored-by: Isaac Gravestock <83659704+gravesti@users.noreply.github.com>

--- a/vignettes/original/_dataset.Rmd
+++ b/vignettes/original/_dataset.Rmd
@@ -24,7 +24,9 @@ knitr::opts_chunk$set(
 )
 options(rmarkdown.html_vignette.check_title = FALSE)
 output_hook <- knitr::knit_hooks$get("output")
-output_null <- function(x, options) return(NULL)
+output_null <- function(x, options) {
+  return(NULL)
+}
 ```
 
 In this vignette, you'll learn how to conduct Bayesian dynamic borrowing (BDB)
@@ -32,13 +34,13 @@ analyses using `psborrow2`.
 
 # Before you start
 
-The `psborrows2` package relies on [`Stan`](https://mc-stan.org/) for model fitting,
+The functionality in this article relies on [`Stan`](https://mc-stan.org/) for model fitting,
 specifically via the [`CmdStan`](https://mc-stan.org/users/interfaces/cmdstan.html)
 and [`cmdstanr`](https://mc-stan.org/cmdstanr/) tools.
 
 If you haven't used `CmdStan` before you'll need to install the R package
 and the external program. More information can be found in the
-[`cmdstanr` vignette](https://mc-stan.org/cmdstanr/articles/cmdstanr.html).
+[`cmdstanr` installation guide](https://mc-stan.org/cmdstanr/articles/cmdstanr.html).
 
 The short version is:
 ```{r install-cmdstan-2, eval=FALSE}
@@ -54,6 +56,7 @@ install_cmdstan(cores = 2)
 Now you're ready to start with `psborrow2`.
 ```{r dependencies, message = FALSE}
 library(psborrow2)
+library(cmdstanr)
 ```
 
 # Creating an analysis object {.tabset}
@@ -157,7 +160,7 @@ The column definitions are below:
 
 ## 2. `outcome`
 
-`psborrow2` currently supports three outcomes:
+`psborrow2` currently supports four outcomes:
 
 * Time-to-event with exponential distribution (constant hazard), created with
 `outcome_surv_exponential()`
@@ -165,12 +168,12 @@ The column definitions are below:
 parametrization, created with `outcome_surv_weibull_ph()`
 * Binary endpoints with a Bernoulli distribution and using logistic regression,
 created with `outcome_bin_logistic()`
+* Continuous endpoints with a normal distribution, created with `outcome_cont_normal()`
 
 After we select which outcome and distribution we want,
 we need to specify a prior distribution for the baseline event rate,
 `baseline_prior`. In this case, `baseline_prior` is
-a log hazard rate (for binary endpoints this represents the log
-odds instead). Let's assume we have no prior knowledge on this event rate,
+a log hazard rate. Let's assume we have no prior knowledge on this event rate,
 so we'll specify an uninformative prior: `prior_normal(0, 1000)`.
 
 For our example, let's conduct a time-to-event analysis using the exponential
@@ -254,17 +257,23 @@ anls_obj <- create_analysis_obj(
   borrowing = borrowing,
   treatment = treatment,
   quiet = TRUE
-  )
+)
 ```
 
 ```{r echo = FALSE}
 knitr::knit_hooks$set(output = output_hook)
 ```
 
-
-
 The Stan model compiled successfully and informed us that we are
 ready to begin sampling.
+
+Note that if you are interested in seeing the Stan code that was generated,
+you can use the `get_stan_code()` function to see the full Stan code that will
+be compiled.
+
+```{r get-stan-code}
+get_stan_code(anls_obj)
+```
 
 # Sampling from an analysis object
 
@@ -285,7 +294,7 @@ results <- mcmc_sample(anls_obj,
   iter_sampling = 50000,
   chains = 4,
   seed = 112233
-  )
+)
 ```
 
 ```{r echo = FALSE}
@@ -382,4 +391,4 @@ mcse_quantile(x = vm, probs = c(0.1, 0.5, 0.9))
 ```
 
 `posterior` contains many other helpful functions, as outlined in their
-[vignettes](https://cran.r-project.org/web/packages/posterior/vignettes/posterior.html).
+[vignettes](https://CRAN.R-project.org/package=posterior/vignettes/posterior.html).
