--- a/vignettes/psborrow2.Rmd
+++ b/vignettes/psborrow2.Rmd
@@ -26,28 +26,31 @@ shorten trial duration or reduce the number of subjects needed. However,
 analysis of external control data can also introduce bias. One method for
 incorporating external control data to mitigate bias is **Bayesian dynamic
 borrowing (BDB)**, in which external control data is borrowed to the extent
-that the external and RCT control arms have similar outcomes
-(Viele et. al. 2014).
+that the external and RCT control arms have similar outcomes. See @viele2014use for a summary.
 
 Implementing BDB is computationally involved and requires Markov chain Monte
 Carlo (MCMC) sampling methods, which in turn may require knowledge
 of MCMC sampling software. To overcome these technical barriers and
-we developed `psborrow2` using `cmdstanr`, an R package which facilitates
+we developed `psborrow2`, an R package which facilitates
 the use of the MCMC sampling program Stan (via CMD Stan).
 
-`psborrow2` has two main goals:
+`psborrow2` helps the user:
 
-1. to provide a user-friendly interface for applying BDB on study results that
-handles the MCMC sampling on behalf of the user
+1. **Apply Bayesian dynamic borrowing methods**. `psborrow2` has a user-friendly interface for
+   conducting Bayesian dynamic borrowing analyses using the hierarchical commensurate prior approach 
+   that handles the computationally-difficult MCMC sampling
+   on behalf of the user.
 
-2. to facilitate simulation studies that compare different borrowing parameters
-(e.g. full borrowing, no borrowing, BDB) and other trial and BDB
-characteristics in a unified way
+2. **Conduct simulation studies of Bayesian dynamic borrowing methods**. `psborrow2` includes a
+   framework to compare different trial and borrowing characteristics in a unified way
+   in simulation studies to inform trial design.
 
-Right now, `psborrow2` supports time-to-event endpoints as well as
-binary endpoints.
+3. **Generate data for simulation studies**. `psborrow2` includes a set of functions to generate
+   data for simulation studies.
 
-## Analyze your own data
+`psborrow2` supports time-to-event, binary, and continuous endpoints.
+
+### 1. Apply Bayesian dynamic borrowing methods
 
 `psborrow2` can implement BDB in a scenario wherein a two-arm RCT is
 supplemented with external data on the control arm. Three arms are required to
@@ -63,26 +66,23 @@ Such scenarios are common in drug development because the comparator arm for
 a novel therapy is often the standard of care, for which data exists from
 electronic health care records or from previous phase III registrational trials.
 
-Refer to the "dataset" vignette for more information on
+Refer to the "dataset" article for more information on
 how to implement BDB analyses on your own data:
-`vignette('dataset', package = 'psborrow2')`
+(https://genentech.github.io/psborrow2/articles/dataset.html)[https://genentech.github.io/psborrow2/articles/dataset.html]
 
-## Conduct a simulation study
+### 2. Conduct simulation studies of Bayesian dynamic borrowing methods
 
-Refer to the "simulation study" vignette for more information on
+Refer to the "simulation study" article for more information on
 how to create a simulation study involving BDB and other innovative trial
-designs: `vignette('simulation_study', package = 'psborrow2')`
+designs: [https://genentech.github.io/psborrow2/articles/simulation_study.html](https://genentech.github.io/psborrow2/articles/simulation_study.html)
 
-## Additional information
-`psborrow2` is the successor to
-[`psborrow`](https://cran.r-project.org/web/packages/psborrow/index.html).
-While the core functionality has been replicated in `psborrow2` such that there
-is no longer any reason to prefer `psborrow`, we cite it here
-for posterity.
+### 3. Generate data for simulation studies 
+
+Refer to the "data generation" article for more information on
+how to generate data for simulation studies: [https://genentech.github.io/psborrow2/articles/data_simulation.html](https://genentech.github.io/psborrow2/articles/data_simulation.html)
+
+## Additional articles
+
+Please refer to [https://genentech.github.io/psborrow2/articles/index.html](https://genentech.github.io/psborrow2/articles/index.html) for additional articles on `psborrow2` functionality.
 
 ## References
-Viele, K., Berry, S., Neuenschwander, B., Amzal, B., Chen, F.,
-Enas, N., Hobbs, B., Ibrahim, J.G., Kinnersley, N., Lindborg, S., Micallef,
-S., Roychoudhury, S. and Thompson, L. (2014),
-Use of historical control data for assessing treatment effects in clinical trials.
-__Pharmaceut. Statist., 13: 41--54__. \doi{10.1002/pst.1589}
